// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component deve conseguir renderizar [snapshot] 1`] = `
<div>
  Jonhy
  <button>
    Change
  </button>
</div>
`;

exports[`Button component deve conseguir renderizar [snapshot] 2`] = `
<div>
  Teste
  {"name":["Quantidade máxima de caracteres é 2"]}
  <button>
    Change
  </button>
</div>
`;
